Fix probe failure diagnostics